<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/bill"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="250dp"
            android:gravity="center"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:background="@color/material_green"
            android:text="@string/tip"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/tip3"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/material_green"
            android:text="@string/total_bill"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/tip1"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="250dp"
            android:gravity="center"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:background="@color/material_green"
            android:text="@string/tip"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/total"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/material_green"
            android:text="@string/total_bill"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    </LinearLayout>
</LinearLayout>